style: Make image height auto on narrower screent to prevent image from occupying entire about me card

--- a/style.css
+++ b/style.css
@@ -206,5 +206,6 @@ ul {
     .about-me-card img,
     footer img {
         width: 100%;
+        height: auto;
     }
 }
